ajuste de tamano iconos bio diana y actualizacion de fade-on-scroll en elementos de index.html

--- a/diana.html
+++ b/diana.html
@@ -55,16 +55,16 @@
       </h2>
       <!-- Nuevo grid descriptivo -->
       <div
-        class="mt-8 bg-transparent grid grid-rows-5 md:grid-rows-1 md:grid-cols-5 gap-4"
+        class="mt-8 bg-transparent grid grid-rows-5 md:grid-rows-1 md:grid-cols-5 gap-4 fade-on-scroll"
       >
         <!-- Row 1 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white "
         >
           <img
             src="images/svg/bio-multilingual.svg"
             alt="Multilingüe"
-            class="w-1/3 h-14"
+            class="w-1/3 h-16"
           />
           <p class="text-sm text-[#336699] w-2/3">
             Soy Bilingüe (esp - ing) con identidad bicultural, sensibilidad
@@ -73,12 +73,12 @@
         </div>
         <!-- Row 2 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white "
         >
           <img
             src="images/svg/bio-help.svg"
             alt="Apoyo a comunidades"
-            class="w-1/3 h-14"
+            class="w-1/3 h-16"
           />
           <p class="text-sm text-[#336699] w-2/3">
             Con experiencia extensa en salud mental, servicio a comunidades
@@ -87,12 +87,12 @@
         </div>
         <!-- Row 3 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white "
         >
           <img
             src="images/svg/bio-tools.svg"
             alt="Herramientas terapéuticas"
-            class="w-1/3 h-12"
+            class="w-1/3 h-16"
           />
           <p class="text-sm text-[#336699] w-2/3">
             Y especialización en temas complejos: trauma, adolescencia, familia;
@@ -101,12 +101,12 @@
         </div>
         <!-- Row 4 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white "
         >
           <img
             src="images/svg/bio-heart.svg"
             alt="Empatía"
-            class="w-1/3 h-14"
+            class="w-1/3 h-16"
           />
           <p class="text-sm text-[#336699] w-2/3">
             Mi Enfoque terapéutico compasivo y auténtico, confianza en la
@@ -115,12 +115,12 @@
         </div>
         <!-- Row 5 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white "
         >
           <img
             src="images/svg/bio-sun.svg"
             alt="Transformación"
-            class="w-1/3 h-14"
+            class="w-1/3 h-16"
           />
           <p class="text-sm text-[#336699] w-2/3">
             Mi objetivo es acompañarte para que puedas verte a ti mismo/a, a tu
