--- a/index.html
+++ b/index.html
@@ -566,20 +566,20 @@
 
         <!-- Contenido principal -->
         <div
-          class="relative z-10 max-w-4xl top-0 mx-auto rounded-xl md:p-6 text-center fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
+          class="relative z-10 max-w-4xl top-0 mx-auto rounded-xl md:p-6 text-center fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out "
         >
-          <h2 class="text-2xl font-title italic text-[#336699] py-8">
+          <h2 class="text-2xl font-title italic text-[#336699] py-8 fade-on-scroll">
             ¿Has decidido buscar apoyo?
           </h2>
 
           <img
             src="images/svg/decor-element.svg"
             alt="Decorativo"
-            class="mx-auto w-36 h-2"
+            class="mx-auto w-36 h-2 fade-on-scroll"
           />
 
           <p
-            class="text-gray-700 max-w-xl mx-auto w-[60%] py-12 md:py-24 md:w-[40%] md:text-xl"
+            class="text-gray-700 max-w-xl mx-auto w-[60%] py-12 md:py-24 md:w-[40%] md:text-xlfade-on-scroll"
           >
             A veces existe un conflicto interno sobre si buscar ayuda para
             resolver los problemas de la vida real. Este es un momento crucial,
@@ -589,11 +589,11 @@
           <img
             src="images/png/deco-find-help.png"
             alt="Buscando ayuda"
-            class="mx-auto my-16 max-w-xs size-[40%] md:size-[30%] md:py-16"
+            class="mx-auto my-16 max-w-xs size-[40%] md:size-[30%] md:py-16 fade-on-scroll"
           />
 
           <h2
-            class="text-xl md:text-2xl font-title italic text-[#336699] py-8 w-[60%] mx-auto"
+            class="text-xl md:text-2xl font-title italic text-[#336699] py-8 w-[60%] mx-auto fade-on-scroll"
           >
             Encuentra el apoyo que necesitas en tu camino
           </h2>
@@ -601,11 +601,11 @@
           <img
             src="images/svg/decor-element.svg"
             alt="Ícono"
-            class="mx-auto w-36 h-2"
+            class="mx-auto w-36 h-2 fade-on-scroll"
           />
 
           <p
-            class="text-gray-700 max-w-xl mx-auto w-[80%] py-12 md:py-12 md:w-[80%] md:text-xl"
+            class="text-gray-700 max-w-xl mx-auto w-[80%] py-12 md:py-12 md:w-[80%] md:text-xl fade-on-scroll"
           >
             La consejería te ofrece un acompañamiento confiable en el camino
             frente a los desafíos de la vida, brindando orientación y
@@ -625,14 +625,14 @@
         <img
           src="images/svg/sp2-hourglass.svg"
           alt="Decoración central"
-          class="w-full max-w-md md:max-w-lg lg:max-w-xl h-auto"
+          class="w-full max-w-md md:max-w-lg lg:max-w-xl h-auto fade-on-scroll"
         />
 
         <!-- Imagen encima, centrada y alineada hacia la parte inferior -->
         <img
           src="images/png/new-horizon.png"
           alt="Imagen nuevo horizonte"
-          class="absolute bottom-2 md:bottom-4 w-16 h-auto md:size-20 md:bottom-4 md:size-32 mx-auto z-10 max-w-[200px]"
+          class="absolute bottom-2 md:bottom-4 w-16 h-auto md:size-20 md:bottom-4 md:size-32 mx-auto z-10 max-w-[200px] fade-on-scroll"
         />
       </div>
     </section>
@@ -647,7 +647,7 @@
       "
     >
       <!-- Línea decorativa (puede colocarse antes o después del contenido del hijo) -->
-      <div class="h-[10px] mx-auto bg-[#E3BE03]/85"></div>
+      <div class="h-[10px] mx-auto bg-[#E3BE03]/85 fade-on-scroll"></div>
       <!-- Contenedor hijo 1 -->
       <div class="w-full mx-auto">
         <!-- Contenedor hijo1 con altura completa -->
