--- a/susana.html
+++ b/susana.html
@@ -10,7 +10,7 @@
    <!-- Botón regresar -->
     <div class="fixed top-0 w-full flex justify-end pt-0 md:hidden">
       <a
-        href="team.html"
+        href="team.html#susana"
         class="w-full flex items-center justify-end gap-2 text-left text-sm md:text-base bg-[#336699] text-white px-4 py-2 hover:bg-[#2b5c88] transition"
       >
         <span>Regresar</span>
