ajuste de los lingk de retorno a l pagina team desde lel detalles de la bio

--- a/jorge.html
+++ b/jorge.html
@@ -10,7 +10,7 @@
      <!-- Botón regresar -->
     <div class="fixed top-0 w-full flex justify-end pt-0 md:hidden">
       <a
-        href="team.html"
+        href="team.html#jorge"
         class="w-full flex items-center justify-end gap-2 text-left text-sm md:text-base bg-[#336699] text-white px-4 py-2 hover:bg-[#2b5c88] transition"
       >
         <span>Regresar</span>
@@ -104,7 +104,7 @@
           Contactar
         </a>
         <a
-          href="team.html#jorgeb"
+          href="team.html#jorge"
           class="border border-[#336699] text-[#336699] px-6 py-2 rounded-full text-sm md:text-base hover:bg-[#f0f4f8] transition"
         >
           Regresar al menú
