--- a/team.html
+++ b/team.html
@@ -365,8 +365,8 @@
           </div>
 
           <!-- Tarjeta 2: Jorge B -->
-          <div  id="jorgeb"
-            class="flex flex-col md:flex-row-reverse items-center md:justify-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-30"
+          <div  id="jorge"
+            class="flex flex-col md:flex-row-reverse items-center  md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-56"
             data-aos="fade-up"
             data-aos-delay="0"
           >
@@ -411,7 +411,7 @@
             </div>
           </div>
 
-          <!-- Tarjeta 3: Teraspista 2 -->
+          <!-- Tarjeta 3: Susana -->
           <div  id="susana"
             class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-56 "
             data-aos="fade-up"
@@ -457,8 +457,8 @@
           </div>
 
           <!-- Tarjeta 4: Berenice Terrazas -->
-          <div
-            class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
+          <div id="berenice"
+            class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-56"
             data-aos="fade-up"
             data-aos-delay="0"
           >
@@ -502,8 +502,8 @@
           </div>
 
           <!-- Tarjeta 5: Fidel -->
-          <div
-            class="flex flex-col md:flex-row items-center md:items-center mx-auto gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
+          <div id="fidel"
+            class="flex flex-col md:flex-row items-center md:items-center mx-auto gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-56"
             data-aos="fade-up"
             data-aos-delay="0"
           >
