ajuste link detalles berenice.html

--- a/team.html
+++ b/team.html
@@ -479,7 +479,7 @@
               </p>
 
               <a
-                href="admin.html"
+                href="berenice.html"
                 class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
               >
                 Leer más
