--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 
         <!-- Contenido principal -->
         <div
-          class="relative z-10 max-w-4xl top-0 mx-auto rounded-xl md:p-6 text-center fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out "
+          class="relative z-10 max-w-4xl top-0 mx-auto rounded-xl md:p-6 text-center fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll "
         >
           <h2 class="text-2xl font-title italic text-[#336699] py-8 fade-on-scroll">
             ¿Has decidido buscar apoyo?
@@ -738,7 +738,7 @@
           <div class="relative z-10 w-full flex flex-col justify-end gap-4">
             <!-- Título -->
             <h1
-              class="text-2xl md:text-3xl font-semibold text-right md:text-right fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
+              class="text-2xl md:text-3xl font-semibold text-right md:text-right fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out "
             >
               Terapia Familiar y Parejas
             </h1>
